--- a/PRIMER PROYECTO/css/main.css
+++ b/PRIMER PROYECTO/css/main.css
@@ -100,13 +100,14 @@ textarea {
   display: none !important;
 }
 
+/*Estilos generales*/
 html {
   box-sizing: border-box;
 }
 
 *,
-*::before,
-*::after {
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -289,6 +290,64 @@ nav ul li:hover {
 .hidden {
   display: none;
 }
+
+.contenedor {
+  width: auto;
+  margin: 40px;
+  margin-top: 0px;
+}
+
+.span {
+  color: #1ed223;
+}
+.ul {
+  list-style: none;
+}
+
+.clear,
+.clear::after {
+  content: "";
+  display: block;
+}
+
+.center {
+  text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .contenedor-grid {
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: 15px;
+  }
+  .contenedor-grid::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+
+  [class*="columnas"] {
+    padding: 0 10 px;
+    float: left;
+  }
+
+  .columnas1-4 {
+    width: 25%;
+  }
+  .columnas2-4 {
+    width: 50%;
+  }
+  .columnas3-4 {
+    width: 75%;
+  }
+  .columnas1-3 {
+    width: 33.3%;
+  }
+  .columnas2-3 {
+    width: 66.6%;
+  }
+}
+
 /*
    * Hide only visually, but have it available for screen readers:
    * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
@@ -448,4 +507,16 @@ nav ul li:hover {
   h3 {
     page-break-after: avoid;
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f2f2f2;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #3b9009;
 }
